--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jobsapp",
+  "name": "tarifka",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -16,12 +16,12 @@
     "dotenv": "^10.0.0",
     "expo": "~43.0.2",
     "expo-status-bar": "~1.1.0",
-    "himalaya": "^1.1.0",
+    "lottie-react-native": "^5.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-dotenv": "^3.3.0",
-    "react-native-render-html": "^6.3.1",
+    "react-native-hr": "^1.1.4",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-web": "0.17.1"
